Search bar fixed and movie details page updated

--- a/src/components/movies/ActorCard.css
+++ b/src/components/movies/ActorCard.css
@@ -213,6 +213,10 @@
     flex-shrink: 0;
   }
   
+  .notableWorkLink.collection .title-text {
+    font-weight: 700;
+  }
+  
   /* Hover effects */
   .profileImage:hover .imageNavButtonLeft,
   .profileImage:hover .imageNavButtonRight {
